--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#home" class="nav__link">Home</a>
+              <a href="#home" class="nav__link active-link">Home</a>
             </li>
             <li class="nav__item">
               <a href="#celebrate" class="nav__link">Celebrate</a>
@@ -308,6 +308,9 @@
 
     <!-- ==========  SCROLL UP  ============ -->
 
+    <a href="" class="scrollup" id="scroll-up">
+      <i class='bx bx-up-arrow-alt scrollup__icon'></i>
+    </a>
     <!-- ==========  SCROLL REVEAL  ============ -->
 
     <!-- ==========  SWIPER JS  ============ -->
