--- a/index.html
+++ b/index.html
@@ -45,8 +45,14 @@
           <img src="assets/img/nav-light.png" alt="" class="nav__img">
         </div>
 
-        <div class="nav__toggle" id="nav-toggle">
-          <i class='bx bx-grid-alt' ></i>
+        <div class="nav__btns">
+          <!-- Boton para cambiar de tema   -->
+          <i class='bx bx-moon change-theme' id="theme-button"></i>
+
+          <!-- Boton de activacion -->
+          <div class="nav__toggle" id="nav-toggle">
+            <i class='bx bx-grid-alt' ></i>
+          </div>
         </div>
 
       </nav>
