Responsivo a distintos tamanos de dispositivos

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
       <!-- ==========  NEW  ============ -->
       <section class="new section container" id="new">
-        <h2 class="section_-title">
+        <h2 class="section__title">
           New Gifts
         </h2>
 
