--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </section>
 
       <!-- ==========  CELEBRATE  ============ -->
-      <section class="celebrate section container" >
+      <section class="celebrate section container" id="celebrate" >
         <div class="celebrate__container grid">
           <div class="celebrate__data">
             <h2 class="section__title celebrate__title">
@@ -314,10 +314,12 @@
 
     <!-- ==========  SCROLL UP  ============ -->
 
-    <a href="" class="scrollup" id="scroll-up">
+    <a href="#" class="scrollup" id="scroll-up">
       <i class='bx bx-up-arrow-alt scrollup__icon'></i>
     </a>
     <!-- ==========  SCROLL REVEAL  ============ -->
+
+    <script src="assets/js/scrollreveal.min.js"></script>
 
     <!-- ==========  SWIPER JS  ============ -->
     <script src="assets/js/swiper-bundle.min.js"></script>
